<?xml version="1.0"?>
<package>
  <name>libwhycon</name>
  <version>1.2.0</version>
  <description>
    WhyCon localization system
  </description>
  <author email="v01d@todo.todo">Matias Nitsche</author>
  <maintainer email="v01d@todo.todo">Matias Nitsche</maintainer>
  <url type="repository">https://github.com/lrse/whycon</url>
  <url type="bugtracker">https://github.com/lrse/whycon</url>
  <license>LGPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
