<?xml version="1.0"?>
<package>
  <name>whycon</name>
  <version>1.2.0</version>
  <description>
    WhyCon localization system
  </description>
  <author email="v01d@todo.todo">Matias Nitsche</author>
  <maintainer email="v01d@todo.todo">Matias Nitsche</maintainer>
  <url type="repository">https://github.com/lrse/whycon</url>
  <url type="bugtracker">https://github.com/lrse/whycon</url>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libwhycon</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libwhycon</run_depend>
</package>
