<?xml version="1.0"?>
<package>
  <name>whycon</name>
  <version>1.2.1</version>
  <description>
    WhyCon localization system
  </description>
  <author email="mnitsche@dc.uba.ar">Matias Nitsche</author>
  <!--<maintainer email="mnitsche@dc.uba.ar">Matias Nitsche</maintainer>-->
  <!-- LCAS local maintainers for this fork: -->
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <maintainer email="JPulidoFentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>
  <maintainer email="tkrajnik@lincoln.ac.uk">Tom Krajnik</maintainer>
  
  <url type="repository">https://github.com/lrse/whycon</url>
  <url type="bugtracker">https://github.com/lrse/whycon</url>
  
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
